[package]
name = "setheum-example"
version = "0.8.0"
authors = ["Setheum Labs"]
edition = "2018"

[dependencies]
# external dependencies
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }

# Substrate dependencies
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", version = "3.0.0"}
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", version = "3.0.0"}
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", version = "3.0.0"}

[dev-dependencies]
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", version = "3.0.0"}
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", version = "3.0.0"}

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
]
try-runtime = ["frame-support/try-runtime"]
