[package]
name = "setheum-example"
version = "0.9.1"
authors = ["Setheum Labs"]
edition = "2018"

[dependencies]
# external dependencies
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }

# Substrate dependencies
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", tag = "monthly-2021-08", version = '4.0.0-dev'}
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", tag = "monthly-2021-08", version = '4.0.0-dev'}
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", tag = "monthly-2021-08", version = '4.0.0-dev'}

[dev-dependencies]
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", tag = "monthly-2021-08", version = '4.0.0-dev'}
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", tag = "monthly-2021-08", version = '4.0.0-dev'}

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
]
try-runtime = ["frame-support/try-runtime"]
